# LLaVA

./: pyproject.toml  requirements.txt
scripts/: finetune_lora.sh
