[tool.poetry]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
homepage = "https://llava-vl.github.io"
repository = "https://github.com/haotian-liu/LLaVA"
keywords = ["language model", "visual assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"  # Specify the Python version range here
torch = "2.1.2"
torchvision = "0.16.2"
transformers = "4.37.2"
tokenizers = "0.15.1"
sentencepiece = "0.1.99"
shortuuid = "*"
accelerate = "0.21.0"
peft = "*"
bitsandbytes = "*"
pydantic = "*"
markdown2 = {version = "*", extras = ["all"]}
numpy = "*"
scikit-learn = "1.2.2"
gradio = "4.16.0"
gradio_client = "0.8.1"
requests = "*"
httpx = "0.24.0"
uvicorn = "*"
fastapi = "*"
einops = "0.6.1"
einops-exts = "0.0.4"
timm = "0.6.13"

[tool.poetry.extras]
train = ["deepspeed", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
